demo/src/main/java/com/example/demo/todolist/error/BaseException.java
package com.example.demo.todolist.error;

public abstract class BaseException extends RuntimeException {
    public abstract BaseExceptionType getExceptionType();
}
